# cross-copy

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  install.ps1  install.sh  setup.cfg  uninstall.ps1  uninstall.sh
.claude/: launch.json
.github/workflows/: tests.yml
crosscopy/: __init__.py  cli.py  clipboard.py  config.py  contextmenu.py  daemon.py  discovery.py  events.py  filepicker.py  macos.py  macpanel.py  notify.py  offers.py  popup.py  server.py  transfer.py  updater.py  widget.py  windows.py  winnotify.py
crosscopy/webui/: app.js  index.html  style.css
crosscopy/widgetui/: widget.css  widget.html  widget.js
scripts/: bump_version.py
tests/: test_context_menu.py  test_discovery_reliability.py  test_installer_paths.py  test_macos_app.py  test_native_file_picker.py  test_resumable_transfers.py  test_resume_surfaces.py  test_targeted_file_send.py  test_version_bump.py  test_version_surfaces.py  test_windows_support.py
