[metadata]
name = cross-copy
version = 0.4.3
description = Copy-paste files between Mac and Linux machines on the same network, like a clipboard.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
packages = crosscopy
python_requires = >=3.9
install_requires =
    flask>=2.0
    requests>=2.25
    zeroconf>=0.100
include_package_data = True

[options.package_data]
crosscopy = webui/*, widgetui/*

[options.extras_require]
widget =
    pystray>=0.19
    Pillow>=9
    pyobjc-framework-WebKit>=9; sys_platform == "darwin"

[options.entry_points]
console_scripts =
    ccp = crosscopy.cli:main
